# deepseek-ocr.rs

./: .gitignore  Cargo.toml  PLAN.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: build-cuda-containers.yaml  build-extended-artifacts.yml  dependency-boundary.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-12-cli-check.txt  task-13-cli-behavior-test.txt  task-20-dependency-boundary-pass.txt
.sisyphus/notepads/stage-2e-pipeline-unify/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: stage-2e-pipeline-unify.md
benchsuite/: README.md  __init__.py  cli.py  common.py  orchestrator.py  registry.py  schemas.py
benchsuite/models/: __init__.py  base.py  deepseek.py  dots.py  glm.py  paddle.py
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  progress.rs
crates/assets/src/providers/: modelscope.rs
crates/cli/: Cargo.toml  README.md  README_CN.md
crates/cli/src/: app.rs  args.rs  bench.rs  debug.rs  main.rs  prompt.rs  resources.rs
crates/cli/tests/: behavior_contract_test.rs
crates/config/: Cargo.toml
crates/config/src/: args.rs  config.rs  fs.rs  lib.rs  resource_resolver.rs
crates/config/tests/: inference_overrides.rs
crates/core/: Cargo.toml
crates/core/src/: attention.rs  cache.rs  config.rs  inference.rs  lib.rs  ocr_inference_engine.rs  prompt_tokens.rs  runtime_backend.rs  sampling.rs  tensor.rs
crates/dsq-cli/src/: main.rs
crates/dsq-cli/tests/: basic.rs
crates/dsq-models/src/: lib.rs
crates/dsq-models/src/adapters/: deepseek_ocr.rs  dots_ocr.rs  mod.rs
crates/dsq-models/tests/: adapters.rs
crates/dsq-runtime/src/: lib.rs
crates/dsq-writer/src/: lib.rs
crates/dsq-writer/tests/: writer.rs
crates/dsq/src/: lib.rs
crates/dsq/tests/: reader.rs
crates/infer-deepseek/: Cargo.toml
crates/infer-deepseek/src/: lib.rs  quantization.rs
crates/infer-deepseek/src/config/: mod.rs
crates/infer-deepseek/src/model/: mod.rs
crates/infer-deepseek/src/transformer/: block.rs  decoder.rs  model.rs  rope.rs  weights.rs
crates/infer-deepseek/src/vision/: clip.rs  mod.rs  preprocess.rs  qwen2.rs  sam.rs
crates/infer-deepseek/tests/: baseline.rs  long_generation_baseline.rs  metal_cache_consistency_diff.rs  metal_f16_cache_swap_logits.rs  metal_f16_decode_cache_f32.rs  metal_f16_decode_embed_f32.rs  metal_f16_f32_cache_layer_diff.rs  metal_f16_f32_layer_diff.rs  metal_f16_f32_logits_diff.rs  metal_f16_f32_vision_diff.rs  metal_f16_prefill_f32_decode.rs  runtime_config_from_real_ocr1.rs  runtime_config_roundtrip_real_ocr2.rs  transformer_block.rs  transformer_weights.rs  vision_weights.rs
crates/infer-deepseek/tests/common/: mod.rs
crates/infer-dots/: Cargo.toml
crates/infer-dots/src/: lib.rs  model.rs  quant.rs  snapshot.rs  tokenizer.rs
crates/infer-dots/src/config/: mod.rs
crates/infer-dots/src/transformer/: block.rs  model.rs  rope.rs
crates/infer-dots/src/vision/: dots_vit.rs  mod.rs  preprocess.rs
crates/infer-dots/tests/: config.rs  model.rs  quant.rs  tokenizer.rs  vision_dots_vit.rs  vision_preprocess.rs
crates/infer-glm/: Cargo.toml
crates/infer-glm/src/: config.rs  lib.rs  model.rs  vision.rs
crates/infer-glm/src/transformer/: attention.rs  block.rs  mod.rs  model.rs  ops.rs  rope.rs  weights.rs
crates/infer-paddleocr/: Cargo.toml
crates/infer-paddleocr/src/: lib.rs  model.rs
crates/infer-paddleocr/src/config/: mod.rs
crates/infer-paddleocr/src/transformer/: attention.rs  block.rs  mod.rs  model.rs  ops.rs  rope.rs  weights.rs
crates/infer-paddleocr/src/vision/: encoder.rs  preprocess.rs  projector.rs
crates/infer-paddleocr/tests/: model.rs  transformer_model.rs  vision_preprocess.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: api.rs  config.rs  ext.rs  fs.rs  lib.rs  manager.rs  model.rs  observer.rs  pipeline.rs  prelude.rs  runtime.rs
crates/pipeline/tests/: config_resolver_test.rs  fs_options_test.rs  model_id_test.rs  model_manager_test.rs  observer_event_test.rs  pipeline_generate_test.rs  pipeline_handle_test.rs  runtime_builder_test.rs
crates/server/: Cargo.toml  README.md  README_CN.md
crates/server/src/: app.rs  args.rs  generation.rs  lib.rs  main.rs  models.rs  resources.rs  routes.rs  state.rs  stream.rs
crates/server/tests/: api_contract_test.rs  state.rs
deepseek_ocr_benchsuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: capture_glm_baseline.py  check-dependency-boundary.sh  compare_glm_baseline.py  gate_metal_matrix.py
