[package]
name = "deepseek-ocr-cli"
version = "0.5.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true}
image = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
deepseek-ocr-pipeline = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
cli-debug = ["deepseek-ocr-pipeline/cli-debug"]
glm-trace = ["deepseek-ocr-pipeline/glm-trace"]
dhat-heap = ["deepseek-ocr-pipeline/dhat-heap"]
memlog = ["deepseek-ocr-pipeline/memlog"]
flash-attn = ["deepseek-ocr-pipeline/flash-attn"]
metal = ["deepseek-ocr-pipeline/metal"]
accelerate = ["deepseek-ocr-pipeline/accelerate"]
cuda = ["deepseek-ocr-pipeline/cuda"]
mkl = ["deepseek-ocr-pipeline/mkl"]
bench-metrics = ["deepseek-ocr-pipeline/bench-metrics"]
