[package]
name = "deepseek-ocr-infer-dots"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
deepseek-ocr-core = { path = "../core" }
deepseek-ocr-dsq-runtime = { path = "../dsq-runtime" }
deepseek-ocr-dsq-models = { path = "../dsq-models" }
tracing = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
image = { workspace = true }
tokenizers = { workspace = true }
fast_image_resize = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
candle-flash-attn = { version = "0.9", default-features = false, optional = true }

[features]
default = []
memlog = ["deepseek-ocr-core/memlog"]
flash-attn = ["dep:candle-flash-attn"]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
]
cuda = []
mkl = []
