[package]
name = "deepseek-ocr-infer-glm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
deepseek-ocr-core = { path = "../core" }

[features]
default = []
trace-logits = []
memlog = ["deepseek-ocr-core/memlog"]
flash-attn = []
metal = [
    "candle-core/metal",
    "candle-nn/metal",
]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
]
mkl = [
    "candle-core/mkl",
    "candle-nn/mkl",
]
