[package]
name = "deepseek-ocr-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
tracing = { workspace = true }

deepseek-ocr-core = { workspace = true }
deepseek-ocr-config = { workspace = true }

# Model backends
# (kept as direct deps so the pipeline can provide an AutoModel-like loader)
deepseek-ocr-infer-deepseek = { path = "../infer-deepseek" }
deepseek-ocr-infer-paddleocr = { path = "../infer-paddleocr" }
deepseek-ocr-infer-dots = { path = "../infer-dots" }
deepseek-ocr-infer-glm = { path = "../infer-glm" }

[features]
default = []

# Forward common runtime features so CLI/Server can depend on a single crate.
memlog = [
    "deepseek-ocr-core/memlog",
    "deepseek-ocr-infer-deepseek/memlog",
    "deepseek-ocr-infer-paddleocr/memlog",
    "deepseek-ocr-infer-dots/memlog",
    "deepseek-ocr-infer-glm/memlog",
]

flash-attn = [
    "deepseek-ocr-core/flash-attn",
    "deepseek-ocr-infer-deepseek/flash-attn",
    "deepseek-ocr-infer-paddleocr/flash-attn",
    "deepseek-ocr-infer-dots/flash-attn",
    "deepseek-ocr-infer-glm/flash-attn",
]

metal = [
    "deepseek-ocr-core/metal",
    "deepseek-ocr-infer-deepseek/metal",
    "deepseek-ocr-infer-paddleocr/metal",
    "deepseek-ocr-infer-dots/metal",
    "deepseek-ocr-infer-glm/metal",
]

accelerate = [
    "deepseek-ocr-core/accelerate",
    "deepseek-ocr-infer-deepseek/accelerate",
    "deepseek-ocr-infer-paddleocr/accelerate",
    "deepseek-ocr-infer-dots/accelerate",
    "deepseek-ocr-infer-glm/accelerate",
]

cuda = [
    "deepseek-ocr-core/cuda",
    "deepseek-ocr-infer-deepseek/cuda",
    "deepseek-ocr-infer-paddleocr/cuda",
    "deepseek-ocr-infer-dots/cuda",
    "deepseek-ocr-infer-glm/cuda",
]

mkl = [
    "deepseek-ocr-core/mkl",
    "deepseek-ocr-infer-deepseek/mkl",
    "deepseek-ocr-infer-paddleocr/mkl",
    "deepseek-ocr-infer-dots/mkl",
    "deepseek-ocr-infer-glm/mkl",
]

# Debug-only convenience feature.
glm-trace = ["deepseek-ocr-infer-glm/trace-logits"]
